# tramdag

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.local.example.json
.claude/hooks/: protect_measurement.py
.github/workflows/: ci.yml
data/carefl/: obs.csv  truth.json
data/ite-observational/: obs.csv  truth.json
data/magic-mrclean/: README.md  fit_ls.R
data/magic-mrclean/ls/: obs.csv  rct.csv  truth.json
data/magic-mrclean/nl/: obs.csv  rct.csv  truth.json
data/triangle-mixed/exp/: obs.csv  truth.json
data/triangle-mixed/linear/: obs.csv  truth.json
data/triangle/atan/: obs.csv  truth.json
data/triangle/linear/: obs.csv  (+1 more)
data/vaca/: obs.csv  truth.json
docs/: fitting.md  stroke-case-study.md  training-speed.md
docs/perf/: 2026-06-12-1423_MAC-MINI.json  2026-06-12-1528_ios-nb-duerr.json  2026-06-15-0636_workstation.json  REPORT.md
docs/research/: HEARTBEAT.md  IDEAS.md  LEADERBOARD.md  MISSION_autoresearch.md  PROJECT_PROGRESSION.md  README.md  REPORT.md  RESEARCH_LOG.md
experiments/: all_ls_flow.py  all_ls_long.py  bench_training.py  common.py  counterfactual_demo.py  exp_ordinal_warmstart.py  exp_seed_classical.py  exp_warmstart.py  ite_train_size.py  nihss6_flow.py  paper_carefl.py  paper_common.py  paper_triangle.py  paper_triangle_mixed.py  paper_vaca.py  perf_machine.py  probe_compile.py  probe_feat_cache.py  profile_epoch.py  sim_flow.py  sweep_threads.py  validate_ls.py  verify_gpu.py  verify_gpu_cpu_cores.py
notebooks/: README.md  additive_vs_joint_ci.py  classical_fit_tram_dag.py  demo_tram_dag_colab.ipynb  demo_tram_dag_colab.py  intro_tram_dag.py  ite_observational.py  stroke_case_study.py  transforms_tram_dag.py
src/tramdag/: __init__.py  conditioners.py  env.py  flow.py  spec.py  transforms.py
src/zuko_dag/: __init__.py  conditioners.py  flow.py  spec.py  transforms.py
tests/: README.md  test_additive_ci.py  test_api_papercuts.py  test_fit_classical.py  test_fit_schedules.py  test_flow.py  test_intercept_contributions.py  test_ite_observational.py  test_joint_terms.py  test_marginal_init.py  test_paper_dgps.py  test_simulations.py  test_spec_terms.py
(+23 files in other folders)
