[project]
name = "zuko-dag"
version = "0.1.0"
description = "Causal normalizing flow on a DAG (zuko-based re-implementation of TRAM-DAG)"
requires-python = ">=3.10"
dependencies = [
    "zuko>=1.3",
    "torch>=2.0",
    "numpy",
    "pandas",
    "scikit-learn",
    "statsmodels",
    "matplotlib",
    "scipy",
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zuko_dag"]
