[project]
name = "tramdag"
version = "0.3.0"
description = "Interpretable Neural Causal Models (TRAM-DAGs) in PyTorch: one causal normalizing flow for observational, interventional and counterfactual queries"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Oliver Dürr", email = "oliver.duerr@gmail.com" },
    { name = "Beate Sick" },
]
requires-python = ">=3.10"
keywords = [
    "causal-inference", "normalizing-flows", "transformation-models",
    "counterfactuals", "structural-causal-models", "interpretability",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "zuko>=1.3",
    "torch>=2.0",
    "numpy",
    "pandas",
]

[project.urls]
Homepage = "https://github.com/tensorchiefs/tramdag"
"Method paper (CLeaR 2025)" = "https://arxiv.org/abs/2503.16206"
"Stroke case study" = "https://arxiv.org/abs/2606.12623"

[dependency-groups]
dev = [
    "pytest",
    "scipy",
    "statsmodels",
    "scikit-learn",
    "matplotlib",
]
notebooks = [
    "jupytext",
    "ipykernel",   # so JupyterLab / VS Code can run the generated .ipynb
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tramdag"]

[tool.basedpyright]
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
markers = [
    "slow: long fit/training tests — excluded from PR CI, run in the nightly full suite",
]
